# F3M

./: .gitignore  1_d_conv.cu  3fm_cg_experiments.py  CMakeLists.txt  CMakeLists_V100.txt  FFM_classes.py  FFM_illustration.drawio  FFM_mk2.cuh  FFM_utils.cu  GP_utils.cuh  RFF_sanity_check.py  SVM_comparison.py  ablation_experiments.py  ablation_study_plots_table.py  appendix_table.py  asymetric_kmvm.py  billion_points_demo.py  build_summary_table.py  conjugate_gradient.py  conjugate_solver_FFM_test.py  create_FFM_plots.ipynb  deprecated.txt  divide_n_conquer.cu  division_illustration_1  division_illustration_1.drawio  error_derivation.py  error_derivation_general.py  error_derivation_plots.py  experiment678.py  experiments.py  experiments_2.py  experiments_3.py  experiments_78D.py  experiments_KMVM_real_datasets.py  experiments_distributed.py  experiments_krr_a.py  experiments_krr_b.py  falkon_unit_test.py  generate_KRR_data.py  generate_jobs.py  (+47 more)
.ipynb_checkpoints/: create_FFM_plots-checkpoint.ipynb
F3M_src/: 1_d_conv.cu  GP_utils.cu  linearprobing.cu  main.cu  n_tree.cu  pybinder_setup.cu  setup.py  utils.h
benchs_sparse/: FFMbench.py  bench_sparse_datasets.py  bench_sparse_datasets_25.py  bench_sparse_datasets_full.py  generate_faulty_data.py  hover_scatter.py  plot_res_bench.py  plot_sparse_datasets.py  readme.txt  run_experiments_2_sparse.sh  sparse_datasets.py  test_sparse.py
conjugate_gradient/: benchmark_Gaussian_kernel.py  conjugate_gradient.py  custom_conjugate_gradient_falkon.py  custom_falkon.py  custom_gaussian_kernel.py  custom_incore_falkon.py  gp_experiment_object.py
conjugate_gradient/FALKON_V100_fix/: keops_business.py  keops_mixin_custom.py  kernels.py
deprecated/: pykeops_example_issue.py  test_debug.py
experiment_utils/: generate_jobs.py  plots_KMVM_experiments.py  post_process_gp_results.py  run_experiments_1.sh  run_experiments_2.sh  run_keops_baseline.sh  scalability_analysis.sh  scalability_analysis_post.py
experiments/: FFM_classes.py  SVM_comparison.py  ablation_study_plots_table.py  appendix_table.py  asymetric_kmvm.py  conjugate_solver_FFM_test.py  error_derivation_general.py  error_derivation_plots.py  experiments.py  experiments_KMVM_real_datasets.py  experiments_distributed.py  experiments_krr_a.py  experiments_krr_b.py  falkon_unit_test.py  keops_reference_times.py  minimal_example.py  minimal_example_chunks.py  run_obj.py
illustrations/: .$rebuttal_3FM.drawio.bkp  create_FFM_plots.ipynb  division_illustration_1.drawio  kernel_hardness.py
preprocessing/: generate_KRR_data.py  get_debug_data.py  pre_process_gp_data.py  preprocess_OSM.py
